Update Keyboard Mapping

--- a/ChzSynth/main.html
+++ b/ChzSynth/main.html
@@ -45,37 +45,37 @@
         <section>
 
         <div class="synthBody" id="synthBody">
-            <!-- 1 옥타브 -->
+            <!-- 0 옥타브 -->
             <div class="whiteKey" id="C0"><p class="keyHint">Z</p></div>
             <div class="whiteKey" id="D0"><p class="keyHint">X</p></div>
             <div class="whiteKey" id="E0"><p class="keyHint">C</p></div>
             <div class="whiteKey" id="F0"><p class="keyHint">V</p></div>
             <div class="whiteKey" id="G0"><p class="keyHint">B</p></div>
             <div class="whiteKey" id="A0"><p class="keyHint">N</p></div>
-            <div class="whiteKey" id="B0"><p class="keyHint">M</p></div>
+            <div class="whiteKey" id="B0"><p class="keyHint">Tab<br>M</p></div>
     
             <div class="blackKey" id="Cs0"><p class="keyHint">S</p></div>
             <div class="blackKey" id="Ds0"><p class="keyHint">D</p></div>
             <div class="blackKey" id="Fs0"><p class="keyHint">G</p></div>
             <div class="blackKey" id="Gs0"><p class="keyHint">H</p></div>
-            <div class="blackKey" id="As0"><p class="keyHint">J</p></div>
+            <div class="blackKey" id="As0"><p class="keyHint">`<br>J</p></div>
 
-            <!-- 2 옥타브 -->
+            <!-- 1 옥타브 -->
             <div class="whiteKey" id="C1"><p class="keyHint">,<br>Q</p></div>
             <div class="whiteKey" id="D1"><p class="keyHint">.<br>W</p></div>
             <div class="whiteKey" id="E1"><p class="keyHint">/<br>E</p></div>
-            <div class="whiteKey" id="F1"><p class="keyHint">R</p></div>
+            <div class="whiteKey" id="F1"><p class="keyHint">R⇧<br>R</p></div>
             <div class="whiteKey" id="G1"><p class="keyHint">T</p></div>
             <div class="whiteKey" id="A1"><p class="keyHint">Y</p></div>
             <div class="whiteKey" id="B1"><p class="keyHint">U</p></div>
     
             <div class="blackKey" id="Cs1"><p class="keyHint">L<br>2</p></div>
             <div class="blackKey" id="Ds1"><p class="keyHint">;<br>3</p></div>
-            <div class="blackKey" id="Fs1"><p class="keyHint">5</p></div>
+            <div class="blackKey" id="Fs1"><p class="keyHint">↵<br>5</p></div>
             <div class="blackKey" id="Gs1"><p class="keyHint">6</p></div>
             <div class="blackKey" id="As1"><p class="keyHint">7</p></div>
 
-            <!-- 3 옥타브 -->
+            <!-- 2 옥타브 -->
             <div class="whiteKey" id="C2"><p class="keyHint">I</p></div>
             <div class="whiteKey" id="D2"><p class="keyHint">O</p></div>
             <div class="whiteKey" id="E2"><p class="keyHint">P</p></div>
